--- a/styles/partials/__main.scss
+++ b/styles/partials/__main.scss
@@ -179,10 +179,10 @@
         }
         .pageButton {
             &--next {
-                right: -10px;
+                right: -5px;
             }
             &--prev {
-                left: -10px;
+                left: -5px;
             }
         }
     }
